# NetImpact

./: .env.example  .gitignore  README.md  detailed_config_analysis.py  main.py  netopo  pyproject.toml  validate_text_parsing.py
config/: config_impact_rules.json  expected_structures.json  path_mappings.json
data/configs/: acc-sw-01-native.json  acc-sw-01.xml  core-sw-01.json  core-sw-02.json  dist-rtr-01.json  dist-sw-02.json  iosxr-rtr-01.json  iosxr-rtr-02.json  nxos-sw-01.json  nxos-sw-02.json
data/inventory/: inventory.csv
data/topology/: bgp_peers.core-sw-01.csv  bgp_peers.core-sw-02.csv  bgp_peers.dist-rtr-01.csv  bgp_peers.dist-sw-02.csv  bgp_peers.iosxr-rtr-01.csv  bgp_peers.iosxr-rtr-02.csv  bgp_peers.nxos-sw-02.csv  lldp_neigh.acc-sw-01.csv  lldp_neigh.core-sw-01.csv  lldp_neigh.core-sw-02.csv  lldp_neigh.dist-rtr-01.csv  lldp_neigh.dist-sw-02.csv  lldp_neigh.iosxr-rtr-01.csv  lldp_neigh.iosxr-rtr-02.csv  lldp_neigh.nxos-sw-01.csv  lldp_neigh.nxos-sw-02.csv
docs/: CONFIGURATION_FORMAT_GUIDE.md  CURRENT_STATUS.md  GEMINI.md  NEO4J_VALIDATION_REPORT.md  PHASE8_COMPLETION_REPORT.md  PLAN.md  PROGRESS.md  PROJECT.md  SESSION.md  Untitled-1.md  WORKLOG.md  YANG_QUICK_SETUP.md  YANG_VALIDATION_TROUBLESHOOTING.md  improvements_suggestions.md  mynotes.txt  plan_text_config_support.md  working_yang_validation_example.py
models/yang/: arista-eos-yang-library.json  cisco-ios-xe-yang-library.json  dependency-focused.json  empty-test.json  openconfig-minimal-working.json  openconfig-yang-library.json  working-minimal.json
src/: config.py
src/cli/: main.py  (+4 more)
(+37 files in other folders)
